# crate-of-the-week

./: justfile  readme.md
.github/workflows/: deploy.yml
anyhow-crate/: Cargo.toml  cluster.json
anyhow-crate/src/: main.rs
axum-crate/: Cargo.toml
axum-crate/src/: main.rs
clap-crate/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  anyhow.md  axum.md  clap.md  just.md  reqwest.md  serde.md  thiserror.md
reqwest-crate/: Cargo.toml
reqwest-crate/src/simple/: main.rs
reqwest-crate/src/with_json/: main.rs
serde-crate/: Cargo.toml
serde-crate/src/: main.rs
serde-test/: Cargo.toml
thiserror-crate/: Cargo.toml
thiserror-crate/src/: main.rs
